# task-manager

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: run_tests.yml
conf/: gunicorn_config.py  task_manager.conf
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: permissions.py  settings.py  urls.py  utils.py  views.py
task_manager/label/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/migrations/: 0001_initial.py
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py
task_manager/task/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_executor.py  0003_task_labels.py  0004_alter_task_status.py
task_manager/templates/: 404.html  base.html  create.html  delete.html  index.html  login.html  update.html
task_manager/templates/label/: create.html  delete.html  index.html  update.html
task_manager/templates/status/: create.html  delete.html  index.html  update.html
task_manager/templates/task/: create.html  delete.html  index.html  read.html  update.html
task_manager/templates/user/: create.html  delete.html  index.html  update.html
task_manager/user/: forms.py  tests.py  urls.py  views.py
task_manager/user/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py  0003_delete_user.py
