[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["kpavlov <k.pavlov.reg@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"
python-dotenv = "^1.0.0"
django-filter = "^23.5"
django-extensions = "^3.2.3"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
rollbar = "^1.0.0"


[tool.poetry.group.dev.dependencies]
django-shell-plus = "^1.1.7"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
